Corrected grid item overflow CSS setting to ensure that content does not overflow the grid item div

--- a/static/custom.css
+++ b/static/custom.css
@@ -55,6 +55,7 @@ body {
 .griditem {
     opacity: 0.8;
     border-radius: 10px;
+    overflow-y: hidden;
 }
 
 .selectablegriditem:hover {
